# project-template

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Doxyfile  README.md  conanfile.py  dependencies.cmake  requirements.txt  setup_dev_env.sh
app/: CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt  example.benchmark.cpp  sum.cpp  sum.hpp
cmake/: EnableBenchmark.cmake  EnableBenchmarks.cmake  EnableCcache.cmake  EnableCoverage.cmake  EnableIWYU.cmake  Logging.cmake  TargetSetSanitizer.cmake  TargetSetWarnings.cmake
conan/: build_and_upload_all.sh  conan_install.py  conan_install.sh  release_conan_packages.py
conan/profiles/: gcc-benchmark  gcc-benchmarks  gcc-ci-debug  gcc-debug  gcc-debug-asan  gcc-debug-coverage  gcc-debug-iwyu  gcc-debug-msan  gcc-debug-tsan  gcc-release
docs/doxygen/: Doxyfile
docs/sphinx/: Makefile  api_reference.rst  conf.py  index.rst  requirements.txt
src/: CMakeLists.txt  main.cpp
src/utils/: CMakeLists.txt  assertions.cpp  assertions.hpp  logger.cpp  logger.hpp
tests/: CMakeLists.txt  example.test.cpp  unit_tests_main.cpp
tests/benchmark/: CMakeLists.txt  example.benchmark.cpp  example.cpp
tests/integration/: CMakeLists.txt
tests/unit/: CMakeLists.txt  main.unit.cpp
tests/unit/utils/: CMakeLists.txt  logger.unit.cpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/utils/: CMakeLists.txt  logger.unit_test.cpp
tools/: benchmark_runner.py  generate_docs.sh  plot_benchmark_compare.py  run_benchmarks.sh
