# # ------------------------------------------------------------------------------
## Integration Tests CMake Configuration
##
## This directory is reserved for integration tests that combine multiple
## components or exercise larger subsystems of the project.
##
## Currently empty — add integration test sources and targets here if needed.
## ------------------------------------------------------------------------------
#
## Example (uncomment and adapt when integration tests are added):
##
## add_executable(project_integration_tests
##     example_integration_test.cpp
## )
##
## target_link_libraries(project_integration_tests
##     PRIVATE project_lib
##           GTest::gtest_main
## )
##
## include(GoogleTest)
## gtest_discover_tests(project_integration_tests)
